--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5000
+MONGO_URI=mongodb://hyunwoo:haha8269^^@hyunwoodb-shard-00-00-ns7rb.mongodb.net:27017,hyunwoodb-shard-00-01-ns7rb.mongodb.net:27017,hyunwoodb-shard-00-02-ns7rb.mongodb.net:27017/test?ssl=true&replicaSet=HyunwooDB-shard-0&authSource=admin&retryWrites=true&w=majority
