--- a/config/config.env
+++ b/config/config.env
@@ -6,3 +6,6 @@ GEOCODER_API_KEY=OEp48detBXAUofyZMIYYEZwu4dSfKpv7
 
 FILE_UPLOAD_PATH=./public/uploads
 MAX_FILE_UPLOAD=1000000
+
+JWT_SECRET = lkasjhdglkashdgiung
+JWT_EXPIRE = 30d
