--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.16",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
-    "slugify": "^1.4.0"
+    "slugify": "^1.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7"
   }
 }
