--- a/config/config.env
+++ b/config/config.env
@@ -10,3 +10,10 @@ MAX_FILE_UPLOAD=1000000
 JWT_SECRET = lkasjhdglkashdgiung
 JWT_EXPIRE = 30d
 JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=91317d21e00ed1
+SMTP_PASSWORD=60e11b50a59faf
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=DevCamper
